--- a/css/base.css
+++ b/css/base.css
@@ -10,6 +10,10 @@
   font-family: "Jost", sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 ul,
 ol {
   margin: 0;
@@ -81,19 +85,24 @@ button {
   color: #1367ef;
 }
 
+
+
 input[type="text"],
 input[type="password"],
 input[type="email"],
-input[type="number"] {
+input[type="number"],
+textarea {
   outline: none;
   border: 1px solid #dee0ea;
   padding: 8px 8px 8px 15px;
 }
+
 input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="email"]:focus,
-input[type="number"]:focus {
-  border-color: grey;
+input[type="number"]:focus,
+textarea:focus {
+  border-color: gray;
 }
 
 input[type="number"]::-webkit-inner-spin-button {
