--- a/css/components/slider.css
+++ b/css/components/slider.css
@@ -24,6 +24,12 @@
   font-weight: 500;
 }
 
+.slider-item a {
+  z-index: 1;
+  position: relative;
+}
+
+
 .slider-item .slider-heading {
   font-size: 60px;
   font-weight: 600;
