--- a/css/base.css
+++ b/css/base.css
@@ -6,7 +6,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font: o;
+  font: 14px;
   font-family: "Jost", sans-serif;
 }
 
@@ -84,8 +84,6 @@ button {
   background-color: white;
   color: #1367ef;
 }
-
-
 
 input[type="text"],
 input[type="password"],
