--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,8 @@
 @import url(pages/account.css);
 @import url(pages/cart.css);
 @import url(pages/single-product.css);
+@import url(pages/blog.css);
+@import url(pages/single-blog.css);
 
 /* category */
 @import url(components/category-item.css);
@@ -33,9 +35,5 @@
 
 /* campaigns */
 @import url(components/campaign-item.css);
-
 @import url(components/blog-item.css);
-
-@import url(components/brand-item.css);
-
 @import url(components/campaign-single.css);
