--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -6,8 +6,6 @@
 .section-title h2 {
   font-size: 32px;
   font-weight: 600;
-  line-height: 0.8;
-  margin-bottom: 4px;
 }
 
 /* categories starts */
@@ -18,6 +16,7 @@
 .categories .category-list {
   display: flex;
   gap: 30px;
+  margin: 30px;
   flex-wrap: wrap;
 }
 /* categories ends */
@@ -27,15 +26,12 @@
 .products {
   margin-bottom: 80px;
 }
-.product-wrapper {
-  position: inherit;
-}
 
-/* .products .product-list {
-  /* display: flex;
+.products .product-list {
+  display: flex;
   grid-gap: 20px;
-  flex-wrap: wrap; */
-} */
+  flex-wrap: wrap;
+}
 /* products ends */
 
 /* campaign starts */
