Revert "Styling added and JS implemented"
This reverts commit c84b074b109435b259fef41622ba85739e4c4a21.

--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -31,11 +31,11 @@
   position: inherit;
 }
 
-/* .products .product-list {
-  /* display: flex;
+.products .product-list {
+  display: flex;
   grid-gap: 20px;
-  flex-wrap: wrap; */
-} */
+  flex-wrap: wrap;
+}
 /* products ends */
 
 /* campaign starts */
