fix the code and github

--- a/css/components/product-item.css
+++ b/css/components/product-item.css
@@ -130,7 +130,7 @@
   position: relative;
 }
 
-.product-wrapper .glide__arrow{
+.product-wrapper .glide__arrow {
   position: absolute;
   top: 50%;
   background-color: transparent;
@@ -138,10 +138,23 @@
 }
 
 .product-wrapper .glide__arrow--left {
-  left: 0;
+  left: -40px;
 }
 
 .product-wrapper .glide__arrow--right {
-  right: 0;
+  right: -40px;
 }
 
+.product-wrapper .glide__arrow i {
+  font-size: 40px;
+}
+
+@media (max-width: 576px) {
+  .product-wrapper .glide__arrow--left {
+    left: 0px;
+  }
+
+  .product-wrapper .glide__arrow--right {
+    right: 0px;
+  }
+}
