--- a/css/components/single-product/product-gallery.css
+++ b/css/components/single-product/product-gallery.css
@@ -3,8 +3,15 @@
   padding-right: 15px;
 }
 
+.single-product .single-image-wrapper {
+  overflow: hidden;
+}
+
 .single-product .single-image-wrapper img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform-origin: center center;
 }
 .single-product .single-image-wrapper img:hover {
   cursor: zoom-in;
@@ -29,6 +36,7 @@
 
 .single-product .product-thumb {
   position: relative;
+  margin-top: 7px;
 }
 
 .single-product .glide__arrow {
