--- a/css/components/reviews.css
+++ b/css/components/reviews.css
@@ -85,6 +85,10 @@
   color: gold;
 }
 
+.tab-panel-reviews .comment-form-rating .star.active i{
+  color: gold;
+}
+
 .tab-panel-reviews .comment-form-rating .stars a:first-child {
   padding-left: 0;
 }
