--- a/css/components/single-product/product-info.css
+++ b/css/components/single-product/product-info.css
@@ -72,6 +72,7 @@
   cursor: pointer;
   transition: 0.2s ease all;
 }
+
 .site-main .colors .color-wrapper.active {
   border-color: #e51414;
 }
@@ -157,6 +158,12 @@
 
 .site-main .cart-button button {
   width: 72%;
+}
+
+.site-main .cart-button button:disabled {
+  background-color: #1367ef;
+  color: #fff;
+  border-color: #1367ef;
 }
 
 .site-main .product-extra-buttons {
