--- a/css/components/single-product/product-tabs.css
+++ b/css/components/single-product/product-tabs.css
@@ -24,6 +24,14 @@
   font-size: 14px;
 }
 
+.single-tabs .content.active {
+  display: block;
+}
+
+.single-tabs .content {
+  display: none;
+}
+
 .single-tabs .tab-panel-information table {
   width: 100%;
   border-collapse: collapse;
