--- a/css/base.css
+++ b/css/base.css
@@ -62,6 +62,11 @@ button {
   transition: 0.2s ease all;
 }
 
+.btn:disabled {
+  opacity: 0.4;
+  cursor: no-drop;
+}
+
 .btn-sm {
   line-height: 33px;
 }
