All logic and functions are implemented

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@
 @import url(components/single-product/product-info.css);
 @import url(components/single-product/product-tabs.css);
 @import url(components/reviews.css);
+@import url(components/modal-dialog.css);
 
 /* slider */
 @import url(components/slider.css);
