--- a/css/components/product-item.css
+++ b/css/components/product-item.css
@@ -115,6 +115,11 @@
   transition: all ease 0.4s;
 }
 
+.product-item .product-links button:disabled {
+  opacity: 0.4;
+  cursor: no-drop;
+}
+
 .product-item .product-links button:hover,
 .product-item .product-links a:hover {
   opacity: 0.7;
