--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -1,7 +1,12 @@
 /* headers starts */
 header {
   border-bottom: 1px solid #dee0ea;
-  position: relative;
+  position: sticky;
+  width: 100%;
+  top: 0;
+  background: #fff;
+  z-index: 10;
+
 }
 .global-notification {
   background-color: #1367ef;
